made test changes

--- a/hiit.html
+++ b/hiit.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <nav class="main">
+    <div class="main">
         <div class="main_container">
             <section class="left_column">
                 <h2>HIIT Parameters</h2><br><br>
@@ -69,12 +69,11 @@
                 <button id="submission">Start Timer</button><br>
                 <button id="reset" onClick="window.location.reload()">Reset</button>
             </section>
-
             <section class="right_column">
                 <div id="app"></div>
             </section>
         </div>
-    </nav>
+    </div>
     <script src="script.js"></script>
 </body>
 
