--- a/hiit.html
+++ b/hiit.html
@@ -57,7 +57,18 @@
                 <button id="reset" onClick="window.location.reload()">Reset</button>
             </section>
             <section class="right_column">
-                <div id="app"></div>
+                <div id="app">
+                </div>
+                <div class="keys">
+                    <div class="key-green">
+                        <div class="key-green__box"></div>
+                        <p>= Work</p>
+                    </div>
+                    <div class="key-red">
+                        <div class="key-red__box"></div>
+                        <p>= Rest</p>
+                    </div>
+                </div>
             </section>
         </div>
     </div>
